update bid details page

--- a/obo-stadium/buying-selling-products.html
+++ b/obo-stadium/buying-selling-products.html
@@ -87,9 +87,9 @@
                                 Quản lý mua/bán sản phẩm
                             </a>
 
-                            <div class="selling-buying-products nav-item">
+                            <a href="./buying-order.html" class="selling-buying-products nav-item">
                                 Đơn hàng mua
-                            </div>
+                            </a>
 
                             <div class="selling-buying-products nav-item">
                                 Đơn hàng bán
@@ -107,12 +107,12 @@
                         <div class="nav-tab">
                             <ul class="nav nav-pills" id="pills-tab" role="tablist">
                                 <li class="nav-item">
-                                    <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home"
-                                        role="tab" aria-controls="pills-home" aria-selected="true">Hàng đấu giá</a>
+                                    <a class="nav-link active" id="bid-tab" data-toggle="pill" href="#bid"
+                                        role="tab" aria-controls="bid" aria-selected="true">Hàng đấu giá</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile"
-                                        role="tab" aria-controls="pills-profile" aria-selected="false">Hàng đặt bán</a>
+                                    <a class="nav-link" id="sell-tab" data-toggle="pill" href="#sell"
+                                        role="tab" aria-controls="sell" aria-selected="false">Hàng đặt bán</a>
                                 </li>
                             </ul>
                         </div>
@@ -120,19 +120,19 @@
                         <div class="tab-content" id="pills-tabContent">
 
                             <!-- Bid Section -->
-                            <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
-                                aria-labelledby="pills-home-tab">
+                            <div class="tab-pane fade show active" id="bid" role="tabpanel"
+                                aria-labelledby="bid-tab">
 
                                 <!-- Item -->
                                 <div class="item">
                                     <div class="header-item">
                                         <div class="order-number-wrapper">
-                                            Mã đơn <a href="#" class="order-number">
+                                            Mã đơn <a href="./bid-details.html" class="order-number">
                                                 #123abc
                                             </a>
                                         </div>
 
-                                        <a href="#" class="full-details">
+                                        <a href="./bid-details.html" class="full-details">
                                             Xem chi tiết
                                         </a>
                                     </div>
@@ -167,7 +167,7 @@
                                 <!-- Item Small -->
                                 <div class="item-small">
                                     <div class="order-number-wrapper">
-                                        Mã đơn <a href="#" class="order-number">
+                                        Mã đơn <a href="./bid-details.html" class="order-number">
                                             #123abc
                                         </a>
                                     </div>
@@ -341,8 +341,8 @@
                             </div>
 
                             <!-- Asks Section -->
-                            <div class="tab-pane fade" id="pills-profile" role="tabpanel"
-                                aria-labelledby="pills-profile-tab">
+                            <div class="tab-pane fade" id="sell" role="tabpanel"
+                                aria-labelledby="sell-tab">
 
                                 <!-- Item -->
                                 <div class="item">
