update order details page (previous is bid details)

--- a/obo-stadium/buying-order.html
+++ b/obo-stadium/buying-order.html
@@ -137,12 +137,12 @@
                 <div class="item">
                   <div class="header-item">
                     <div class="order-number-wrapper">
-                      Mã đơn <a href="#" class="order-number">
+                      Mã đơn <a href="./order-details.html" class="order-number">
                         #123abc
                       </a>
                     </div>
 
-                    <a href="#" class="full-details">
+                    <a href="./order-details.html" class="full-details">
                       Xem chi tiết
                     </a>
                   </div>
@@ -173,7 +173,7 @@
                 <!-- Item Small -->
                 <div class="item-small">
                   <div class="order-number-wrapper">
-                    Mã đơn <a href="#" class="order-number">
+                    Mã đơn <a href="./order-details.html" class="order-number">
                       #123abc
                     </a>
                   </div>
