convert pure html to pug compiler

--- a/obo-stadium/account.html
+++ b/obo-stadium/account.html
@@ -1,132 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="./vendor/bootstrap/css/bootstrap.min.css" />
-
-    <!-- Font Awesome CSS -->
-    <link rel="stylesheet" type="text/css" href="./vendor/fontawesome/css/all.css">
-
-    <!-- Components CSS -->
-    <link rel="stylesheet" type="text/css" href="./css/components/header.css">
-
-    <!-- Common CSS -->
-    <link rel="stylesheet" type="text/css" href="./css/main.css">
-    <link rel="stylesheet" type="text/css" href="./css/except-home-page.css">
-    <link rel="stylesheet" type="text/css" href="./css/used-in-js.css">
-    <link rel="stylesheet" type="text/css" href="./css/account.css">
-    <title>Hello, world!</title>
-</head>
-
-<body>
-    <header class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light container">
-            <a class="navbar-brand" href="#"> <img src="./image/logo-white.png" alt="logo" class="img-fluid"></a>
-
-            <div class="search-form">
-                <form>
-                    <input type="text" class="form-control" placeholder="Bạn cần tìm gì...">
-                    <button type="submit" class="btn btn-primary text-uppercase col-xl-2 col-md-3 col-12 red-btn">
-                        Tìm kiếm tất cả
-                    </button>
-                </form>
-            </div>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-md-end text-center" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="./shop.html">Sản phẩm</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Tin tức</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Tài khoản</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
-    <main>
-        <div class="main-content-wrapper container">
-
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="left-sidebar">
-                        <div class="header">
-                            <div class="avatar">
-                                <img src="./image/post/avatar.png" alt="avatar" class="img-fluid">
-                            </div>
-                            <div class="user-info">
-                                <div class="user-name">
-                                    Cody
-                                </div>
-
-                                <div class="edit-profile">
-                                    Chỉnh sửa tài khoản
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="break-line"></div>
-
-                        <div class="nav-sidebar">
-                            <a href="./buying-selling-products.html" class="selling-buying-products nav-item">
-                                Quản lý mua/bán sản phẩm
-                            </a>
-
-                            <div class="selling-buying-products nav-item">
-                                Đơn hàng mua
-                            </div>
-
-                            <div class="selling-buying-products nav-item">
-                                Đơn hàng bán
-                            </div>
-
-                            <div class="selling-buying-products nav-item">
-                                Quản lý tài khoản
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    <footer class="container-fluid">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="logo col-md-3 col-12 text-md-left text-center">
-                    <img src="./image/logo-white.png" alt="logo" class="img-fluid">
-                </div>
-
-                <div
-                    class="footer-link col-md-9 col-12 d-flex justify-content-md-end align-items-center flex-md-row flex-column">
-                    <a href="#" class="item">Các câu hỏi thường gặp</a>
-                    <a href="#" class="item">Điều khoản</a>
-                    <a href="#" class="item">Chính sách</a>
-                    <a href="#" class="item">Hỗ trợ</a>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="./vendor/jquery/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <script src="./script/except-home-page.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/><meta http-equiv="X-UA-Compatible" content="ie=edge"/><!-- Bootstrap CSS--><link rel="stylesheet" type="text/css" href="./vendor/bootstrap/css/bootstrap.min.css"/><!-- Slick CSS--><link rel="stylesheet" type="text/css" href="./vendor/slick/slick.css"/><link rel="stylesheet" type="text/css" href="./vendor/slick/slick-theme.css"/><!-- Font Awesome CSS--><link rel="stylesheet" type="text/css" href="./vendor/fontawesome/css/all.css"/><!-- Pretty Checkbox CSS--><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css"/><link rel="stylesheet" type="text/css" href="./css/components/header.css"/><!-- Common CSS--><link rel="stylesheet" type="text/css" href="./css/main.css"/><link rel="stylesheet" type="text/css" href="./css/except-home-page.css"/><link rel="stylesheet" type="text/css" href="./css/used-in-js.css"/><link rel="stylesheet" type="text/css" href="./css/account.css"/><link rel="stylesheet" type="text/css" href="./css/account-setting.css"/><title>Thông tin tài khoản</title><link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon"/></head><body><header class="container-fluid"><nav class="navbar navbar-expand-lg navbar-light container"><a class="navbar-brand" href="./"><img class="img-fluid" src="./image/logo-white.png" alt="logo"/></a><div class="search-form"><form><input class="form-control" type="text" placeholder="Bạn cần tìm gì..."/><button class="btn btn-primary text-uppercase col-xl-2 col-md-3 col-12 red-btn" type="submit">T&igrave;m ki&#x1EBF;m t&#x1EA5;t c&#x1EA3;</button></form></div><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse justify-content-md-end text-center" id="navbarNav"><ul class="navbar-nav"><li class="nav-item"><a class="nav-link" href="./shop.html">S&#x1EA3;n ph&#x1EA9;m</a></li><li class="nav-item"><a class="nav-link" href="./news.html">Tin t&#x1EE9;c</a></li><li class="nav-item"><a class="nav-link" href="./account.html">T&agrave;i kho&#x1EA3;n</a></li></ul></div></nav></header><main><div class="main-content-wrapper container"><div class="row"><div class="col-lg-3"><div class="left-sidebar"><div class="header"><div class="avatar"><img class="img-fluid" src="./image/post/avatar.png" alt="avatar"/></div><div class="user-info"><div class="user-name">Cody</div><div class="edit-profile">Ch&#x1EC9;nh s&#x1EED;a t&agrave;i kho&#x1EA3;n</div></div></div><div class="break-line"></div><div class="nav-sidebar"><a class="selling-buying-products nav-item" href="./buying-selling-products.html">Qu&#x1EA3;n l&yacute; mua/b&aacute;n s&#x1EA3;n ph&#x1EA9;m</a><a class="buying-order nav-item" href="./buying-order.html">&Dstrok;&#x1A1;n h&agrave;ng mua</a><a class="selling-buying-products nav-item">&Dstrok;&#x1A1;n h&agrave;ng b&aacute;n</a><a class="account nav-item active" href="./account.html">Qu&#x1EA3;n l&yacute; t&agrave;i kho&#x1EA3;n</a></div></div></div><div class="col-lg-9 main-content-wrapper"><div class="main-content"><div class="nav-tab"><ul class="nav nav-pills" id="pills-tab" role="tablist"><li class="nav-item"><a class="nav-link active" id="profile-setting-tab" data-toggle="pill" href="#profile-setting" role="tab" aria-controls="profile-setting" aria-selected="true">Hồ sơ tài khoản</a></li><li class="nav-item"><a class="nav-link" id="sell-tab" data-toggle="pill" href="#sell" role="tab" aria-controls="sell" aria-selected="false">Sổ địa chỉ</a></li><li class="nav-item"><a class="nav-link" id="sell-tab" data-toggle="pill" href="#sell" role="tab" aria-controls="sell" aria-selected="false">Thông tin thanh toán</a></li></ul></div><div class="tab-content" id="pills-tabContent"><!-- profile-setting Section--><div class="tab-pane fade show active" id="profile-setting" role="tabpanel" aria-labelledby="profile-setting-tab"><!-- Item--><div class="profile-box"><div class="full-name item-row col-md-10"><div class="text">Họ tên</div><input class="form-control"/></div><div class="email item-row col-md-10"><div class="text">Email</div><input class="form-control"/></div><div class="password item-row col-md-10"><div class="text">Mật khẩu</div><input class="form-control"/></div><div class="phone item-row col-md-10"><div class="text">Số điện thoại</div><input class="form-control"/></div><div class="phone item-row col-md-10"><div class="text">Số điện thoại</div><input class="form-control"/></div></div></div></div></div></div></div></div></main><footer class="container-fluid"><div class="container"><div class="row align-items-center"><div class="logo col-md-3 col-12 text-md-left text-center"><img class="img-fluid" src="./image/logo-white.png" alt="logo"/></div><div class="footer-link col-md-9 col-12 d-flex justify-content-md-end align-items-center flex-md-row flex-column"><a class="item" href="./faqs.html">C&aacute;c c&acirc;u h&#x1ECF;i th&#x1B0;&#x1EDD;ng g&#x1EB7;p</a><a class="item" href="#">&Dstrok;i&#x1EC1;u kho&#x1EA3;n</a><a class="item" href="#">Ch&iacute;nh s&aacute;ch</a><a class="item" href="#">H&#x1ED7; tr&#x1EE3;</a></div></div></div></footer><script type="text/javascript" src="./vendor/jquery/jquery-3.4.1.min.js"></script><script type="text/javascript" src="./vendor/bootstrap/js/bootstrap.min.js"></script><script src="./script/except-home-page.js"></script></body></html>
