update css sort function

--- a/obo-stadium/template-parts/sort-dropdown.html
+++ b/obo-stadium/template-parts/sort-dropdown.html
@@ -1,1 +1,1 @@
-<div class="sort-dropdown"><div class="sort-item">Hàng mới về</div><div class="sort-item">Bán chạy</div><div class="sort-item">Giá thấp đến cao</div><div class="sort-item">Giá cao đến thấp</div><div class="sort-item">a-z</div><div class="sort-item">z-a</div></div>
+<div class="sort-dropdown"><div class="sort-item">Hàng mới về</div><div class="sort-item active">Bán chạy</div><div class="sort-item">Giá thấp đến cao</div><div class="sort-item">Giá cao đến thấp</div><div class="sort-item">a-z</div><div class="sort-item">z-a</div></div>
