update sort data

--- a/obo-stadium/template-parts/sort-dropdown.html
+++ b/obo-stadium/template-parts/sort-dropdown.html
@@ -1,1 +1,1 @@
-<div class="sort-dropdown"><div class="sort-item">Hàng mới về</div><div class="sort-item active">Bán chạy</div><div class="sort-item">Giá thấp đến cao</div><div class="sort-item">Giá cao đến thấp</div><div class="sort-item">a-z</div><div class="sort-item">z-a</div></div>
+<div class="sort-dropdown"><div class="sort-item new-arrival active">Hàng mới</div><div class="sort-item best-seller">Bán chạy</div><div class="sort-item low-to-high-price">Giá thấp đến cao</div><div class="sort-item high-to-low-price">Giá cao đến thấp</div></div>
