update a tag href home page

--- a/obo-stadium/template-parts/footer.html
+++ b/obo-stadium/template-parts/footer.html
@@ -1,1 +1,9 @@
-<footer class="container-fluid"><div class="container"><div class="row align-items-center"><div class="logo col-md-3 col-12 text-md-left text-center"><img class="img-fluid" src="./image/logo-white.png" alt="logo"/></div><div class="footer-link col-md-9 col-12 d-flex justify-content-md-end align-items-center flex-md-row flex-column"><a class="item" href="./faqs.html">Các câu hỏi thường gặp</a><a class="item" href="./rules.html">Điều khoản</a><a class="item" href="./policy.html">Chính sách</a></div></div></div></footer>
+
+<footer class="container-fluid">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="logo col-md-3 col-12 text-md-left text-center"><img class="img-fluid" src="./image/logo-white.png" alt="logo"/></div>
+      <div class="footer-link col-md-9 col-12 d-flex justify-content-md-end align-items-center flex-md-row flex-column"><a class="item" href="./faqs.html">Các câu hỏi thường gặp</a><a class="item" href="./rules.html">Điều khoản</a><a class="item" href="./policy.html">Chính sách</a></div>
+    </div>
+  </div>
+</footer>
