--- a/bootstrap_project/portfolio/index.html
+++ b/bootstrap_project/portfolio/index.html
@@ -193,14 +193,14 @@
 
                 <div class="project mb-5 pt-5" id="portfolio">
                     <h3 class="h3 text-uppercase font-weight-bold mx-5 mb-5">
-                        Portfolio.
+                        Dự án.
                     </h3>
                     <div class="project-item project-one position-relative">
                         <div class="number-order text">
                             01.
                         </div>
                         <img src="image/calculator.png" alt="calculator" class="project-img img-fluid my-5">
-                        <div class="project-link position-absolute">Calculator</div>
+                        <a href="https://cody0203.github.io/dom-projects/calculator-basics/" class="project-link position-absolute">Calculator</a>
                         <div class="technology text-center text">
                             (HTML, CSS, JS, JQuery)
                         </div>
@@ -221,7 +221,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="project-link position-absolute">Marvel Memory Card</div>
+                        <a href="https://cody0203.github.io/memory-card/index.html" class="project-link position-absolute">Marvel Memory Card</a>
                         <div class="technology text-center text">
                             (HTML, CSS, JS, JQuery)
                         </div>
@@ -234,8 +234,8 @@
                         </div>
                         <img src="image/animation_card.png" alt="login_register_form"
                             class="project-img project-img-four img-fluid my-5 rounded-lg">
-                        <div class="project-link position-absolute">Animation
-                            Greating Card</div>
+                        <a href="https://cody0203.github.io/dom-projects/form/html/index.html" class="project-link position-absolute">Animation
+                            Greating Card</a>
 
                         <div class="technology text-center text">
                             (HTML, CSS)
@@ -249,13 +249,40 @@
                         </div>
                         <img src="image/login_register_form.png" alt="login_register_form"
                             class="project-img project-img-three img-fluid my-5 rounded-lg">
-                        <div class="project-link position-absolute">Login/Register Form</div>
+                        <a href="https://cody0203.github.io/dom-projects/form/html/index.html" class="project-link position-absolute">Login/Register Form</a>
                         <div class="technology text-center text">
                             (HTML, CSS, JS)
                         </div>
                         <a href="https://cody0203.github.io/dom-projects/form/html/index.html" class="overlay"></a>
                     </div>
 
+                    <div class="project-item project-five position-relative">
+                        <div class="number-order text">
+                            05.
+                        </div>
+                        <img src="image/kanban.png" alt="kanban"
+                            class="project-img project-img-five img-fluid my-5 rounded-lg">
+                        <a href="https://cody0203.github.io/dom-projects/form/html/index.html" class="project-link position-absolute">Kanban</a>
+                        <div class="technology text-center text">
+                            (HTML, CSS, JS)
+                        </div>
+                        <a href="https://cody0203.github.io/dom-projects/form/html/index.html" class="overlay"></a>
+                    </div>
+
+                    <div class="project-item project-six position-relative">
+                        <div class="number-order text">
+                            06.
+                        </div>
+                        <div class="image-wrapper my-5 rounded-lg">
+                            <img src="image/obo.png" alt="kanban"
+                                class="project-img project-img-six img-fluid">
+                        </div>
+                        <a href="https://cody0203.github.io/obo-stadium/" class="project-link position-absolute">OBO Stadium <br><span class="project-sub-title">(Static web page)</span></a>
+                        <div class="technology text-center text">
+                            (HTML, CSS, JS)
+                        </div>
+                        <a href="https://cody0203.github.io/obo-stadium/" class="overlay"></a>
+                    </div>
                 </div>
 
             </div>
