update portfolio skills

--- a/bootstrap_project/portfolio/index.html
+++ b/bootstrap_project/portfolio/index.html
@@ -186,7 +186,15 @@
                         Kỹ năng.
                     </h3>
 
-                    <canvas id="myChart" class="mt-5"></canvas>
+                    <div class="information mt-5">
+                        <p>
+                            <span class="label font-weight-bold">Ngôn ngữ:</span> HTML, CSS, Javascript.
+                        </p>
+
+                        <p>
+                            <span class="label font-weight-bold">Các nền tảng và frameworks:</span> Jquery, Bootstrap, SASS
+                        </p>
+                    </div>
                     <div class="line mt-5"></div>
                 </div>
 
@@ -200,7 +208,8 @@
                             01.
                         </div>
                         <img src="image/calculator.png" alt="calculator" class="project-img img-fluid my-5">
-                        <a href="https://cody0203.github.io/dom-projects/calculator-basics/" class="project-link position-absolute">Calculator</a>
+                        <a href="https://cody0203.github.io/dom-projects/calculator-basics/"
+                            class="project-link position-absolute">Calculator</a>
                         <div class="technology text-center text">
                             (HTML, CSS, JS, JQuery)
                         </div>
@@ -221,7 +230,8 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="https://cody0203.github.io/memory-card/index.html" class="project-link position-absolute">Marvel Memory Card</a>
+                        <a href="https://cody0203.github.io/memory-card/index.html"
+                            class="project-link position-absolute">Marvel Memory Card</a>
                         <div class="technology text-center text">
                             (HTML, CSS, JS, JQuery)
                         </div>
@@ -234,13 +244,14 @@
                         </div>
                         <img src="image/animation_card.png" alt="login_register_form"
                             class="project-img project-img-four img-fluid my-5 rounded-lg">
-                        <a href="https://cody0203.github.io/dom-projects/form/html/index.html" class="project-link position-absolute">Animation
+                        <a href="https://cody0203.github.io/bai-tap/animated-card3/html/index.html"
+                            class="project-link position-absolute">Animation
                             Greating Card</a>
 
                         <div class="technology text-center text">
                             (HTML, CSS)
                         </div>
-                        <a href="https://cody0203.github.io/dom-projects/form/html/index.html" class="overlay"></a>
+                        <a href="https://cody0203.github.io/bai-tap/animated-card3/html/index.html" class="overlay"></a>
                     </div>
 
                     <div class="project-item project-three position-relative">
@@ -249,7 +260,8 @@
                         </div>
                         <img src="image/login_register_form.png" alt="login_register_form"
                             class="project-img project-img-three img-fluid my-5 rounded-lg">
-                        <a href="https://cody0203.github.io/dom-projects/form/html/index.html" class="project-link position-absolute">Login/Register Form</a>
+                        <a href="https://cody0203.github.io/dom-projects/form/html/index.html"
+                            class="project-link position-absolute">Login/Register Form</a>
                         <div class="technology text-center text">
                             (HTML, CSS, JS)
                         </div>
@@ -262,11 +274,12 @@
                         </div>
                         <img src="image/kanban.png" alt="kanban"
                             class="project-img project-img-five img-fluid my-5 rounded-lg">
-                        <a href="https://cody0203.github.io/dom-projects/form/html/index.html" class="project-link position-absolute">Kanban</a>
+                        <a href="https://cody0203.github.io/kanban-project/"
+                            class="project-link position-absolute">Kanban</a>
                         <div class="technology text-center text">
                             (HTML, CSS, JS)
                         </div>
-                        <a href="https://cody0203.github.io/dom-projects/form/html/index.html" class="overlay"></a>
+                        <a href="https://cody0203.github.io/kanban-project/" class="overlay"></a>
                     </div>
 
                     <div class="project-item project-six position-relative">
@@ -274,10 +287,10 @@
                             06.
                         </div>
                         <div class="image-wrapper my-5 rounded-lg">
-                            <img src="image/obo.png" alt="kanban"
-                                class="project-img project-img-six img-fluid">
+                            <img src="image/obo.png" alt="kanban" class="project-img project-img-six img-fluid">
                         </div>
-                        <a href="https://cody0203.github.io/obo-stadium/" class="project-link position-absolute">OBO Stadium <br><span class="project-sub-title">(Static web page)</span></a>
+                        <a href="https://cody0203.github.io/obo-stadium/" class="project-link position-absolute">OBO
+                            Stadium <br><span class="project-sub-title">(Static web page)</span></a>
                         <div class="technology text-center text">
                             (HTML, CSS, JS)
                         </div>
