update arrow collapse faqs

--- a/obo-stadium/faqs.html
+++ b/obo-stadium/faqs.html
@@ -224,6 +224,7 @@
     <!-- Main Js-->
     <script type="text/javascript" src="./script/main.js"></script>
     <script src="./data.json"></script>
+    <script src="./script/faqs.js"></script>
     <script src="./script/except-home-page.js"></script>
   </body>
 </html>
