change portfolio content

--- a/bootstrap_project/portfolio/index.html
+++ b/bootstrap_project/portfolio/index.html
@@ -192,7 +192,8 @@
                         </p>
 
                         <p>
-                            <span class="label font-weight-bold">Các nền tảng và frameworks:</span> Jquery, Bootstrap, SASS
+                            <span class="label font-weight-bold">Các nền tảng và frameworks:</span> Jquery, Bootstrap,
+                            SASS
                         </p>
                     </div>
                     <div class="line mt-5"></div>
@@ -211,7 +212,12 @@
                         <a href="https://cody0203.github.io/dom-projects/calculator-basics/"
                             class="project-link position-absolute">Calculator</a>
                         <div class="technology text-center text">
-                            (HTML, CSS, JS, JQuery)
+                            <p>
+                                Ngôn ngữ: HTML, CSS, JS
+                            </p>
+                            <p>
+                                Nền tảng: JQuery, Bootstrap
+                            </p>
                         </div>
                         <a href="https://cody0203.github.io/dom-projects/calculator-basics/" class="overlay"></a>
                     </div>
@@ -233,7 +239,12 @@
                         <a href="https://cody0203.github.io/memory-card/index.html"
                             class="project-link position-absolute">Marvel Memory Card</a>
                         <div class="technology text-center text">
-                            (HTML, CSS, JS, JQuery)
+                            <p>
+                                Ngôn ngữ: HTML, CSS, JS
+                            </p>
+                            <p>
+                                Nền tảng: JQuery, Bootstrap
+                            </p>
                         </div>
                         <a href="https://cody0203.github.io/memory-card/index.html" class="overlay"></a>
                     </div>
@@ -249,7 +260,9 @@
                             Greating Card</a>
 
                         <div class="technology text-center text">
-                            (HTML, CSS)
+                            <p>
+                                Ngôn ngữ: HTML, CSS, JS
+                            </p>
                         </div>
                         <a href="https://cody0203.github.io/bai-tap/animated-card3/html/index.html" class="overlay"></a>
                     </div>
@@ -263,7 +276,12 @@
                         <a href="https://cody0203.github.io/dom-projects/form/html/index.html"
                             class="project-link position-absolute">Login/Register Form</a>
                         <div class="technology text-center text">
-                            (HTML, CSS, JS)
+                            <p>
+                                Ngôn ngữ: HTML, CSS, JS
+                            </p>
+                            <p>
+                                Nền tảng: JQuery, Bootstrap
+                            </p>
                         </div>
                         <a href="https://cody0203.github.io/dom-projects/form/html/index.html" class="overlay"></a>
                     </div>
@@ -277,7 +295,12 @@
                         <a href="https://cody0203.github.io/kanban-project/"
                             class="project-link position-absolute">Kanban</a>
                         <div class="technology text-center text">
-                            (HTML, CSS, JS)
+                            <p>
+                                Ngôn ngữ: HTML, CSS, JS
+                            </p>
+                            <p>
+                                Nền tảng: JQuery, Bootstrap
+                            </p>
                         </div>
                         <a href="https://cody0203.github.io/kanban-project/" class="overlay"></a>
                     </div>
@@ -292,7 +315,12 @@
                         <a href="https://cody0203.github.io/obo-stadium/" class="project-link position-absolute">OBO
                             Stadium <br><span class="project-sub-title">(Static web page)</span></a>
                         <div class="technology text-center text">
-                            (HTML, CSS, JS)
+                            <p>
+                                Ngôn ngữ: HTML, CSS, JS
+                            </p>
+                            <p>
+                                Nền tảng: JQuery, SASS, Bootstrap, PugJs
+                            </p>
                         </div>
                         <a href="https://cody0203.github.io/obo-stadium/" class="overlay"></a>
                     </div>
